# trade-agent

./: .gitignore  ARCHITECTURE.md  Makefile  README.md  SKILL.md  pyproject.toml  run_all.sh  wrapper.sh
data/: sample_ohlcv.csv
scripts/: generate_sample_data.py  setup-skills-symlink.sh
skills/: SKILLS-SETUP.md
skills/trade-agent/: SKILL.md  wrapper.sh
skills/trade-agent/reports/: report-template.md
src/trade_agent/: __init__.py  backtest.py  broker.py  cli.py  data.py  db.py  risk.py  strategy.py  types.py
src/trade_agent/analysis/: bias.py  explainer.py  indicators.py  payload.py  plan_builder.py  sr.py  trend.py
src/trade_agent/backtest/: facts_strategy.py  plan_strategy.py
src/trade_agent/brokers/: __init__.py  paper.py
src/trade_agent/data/: __init__.py  binance_client.py  klines_store.py  validator.py
src/trade_agent/engine/: __init__.py  backtest.py  metrics.py
src/trade_agent/features/: __init__.py
src/trade_agent/loaders/: __init__.py  csv.py  parquet.py
src/trade_agent/research/: __init__.py
src/trade_agent/risks/: __init__.py  fixed_fraction.py
src/trade_agent/scripts/: __init__.py  analyze_market.py  backtest_facts.py  dashboard.py  get_latest_facts.py  plan_trade.py  run_experiments.py  sync_klines.py  validate_data.py  walk_forward.py
src/trade_agent/strategies/: __init__.py  sma.py
src/trade_agent/web/: app.js  index.html  style.css
tests/: conftest.py
tests/test_data/: test_binance_client.py  test_klines_store.py  test_validator.py
tests/test_research/: test_db_and_analysis.py
